fixed file extension

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,7 +1,7 @@
 FROM sry9681/vipermonkey:latest
 
 WORKDIR /opt/ViperMonkey/bin
-ADD ViperMonkey_exec /opt/ViperMonkey/bin/
+ADD ViperMonkey_exec.go /opt/ViperMonkey/bin/
 ADD wrapper.sh /opt/ViperMonkey/bin/
 
 CMD ["/bin/bash", "/opt/ViperMonkey/bin/wrapper.sh", "-stderrthreshold=INFO"]
